--- a/modal.html
+++ b/modal.html
@@ -635,6 +635,14 @@
 						<div class="modal-body">
 							<p>
 								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
+								This is a static modal, backdrop click will not close it.
 							</p>
 						</div>
 						<div class="modal-footer">
