--- a/entrar.html
+++ b/entrar.html
@@ -49,23 +49,17 @@
                         <div class="login-form">
                             <form action="banco/validaUsuario.php" method="POST">
                                 <div class="form-group">
-                                    <label>Email Address</label>
+                                    <label>Nome</label>
                                     <input class="au-input au-input--full" type="text" name="nome" placeholder="Email">
                                 </div>
                                 <div class="form-group">
-                                    <label>Password</label>
+                                    <label>Senha</label>
                                     <input class="au-input au-input--full" type="password" name="password" placeholder="Password">
                                 </div>
                                
-                                <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">sign in</button>
+                                <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Login</button>
                                 
                             </form>
-                            <div class="register-link">
-                                <p>
-                                    Don't you have account?
-                                    <a href="cadastro.html">Sign Up Here</a>
-                                </p>
-                            </div>
                         </div>
                     </div>
                 </div>
