--- a/inventario.html
+++ b/inventario.html
@@ -340,14 +340,14 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form action="" method="post" novalidate="novalidate">
+                        <form action="banco/inserir.php" method="post" novalidate="novalidate">
                             <div class="form-group">
                                 <label for="cc-payment" class="control-label mb-1">ID</label>
-                                <input id="cc-pament" name="cc-payment" type="text" class="form-control" aria-required="true" aria-invalid="false">
+                                <input id="cc-pament" name="id" type="text" class="form-control" aria-required="true" aria-invalid="false">
                             </div>
                             <div class="form-group has-success">
                                 <label for="cc-name" class="control-label mb-1">Descrição</label>
-                                <input id="cc-name" name="cc-name" type="text" class="form-control cc-name valid" data-val="true" data-val-required="Please enter the name on card"
+                                <input id="cc-name" name="desc" type="text" class="form-control cc-name valid" data-val="true" data-val-required="Please enter the name on card"
                                     autocomplete="off" aria-required="true" aria-invalid="false" aria-describedby="cc-name-error">
                                 <span class="help-block field-validation-valid" data-valmsg-for="cc-name" data-valmsg-replace="true"></span>
                             </div>
@@ -355,7 +355,7 @@
                                 <div class="col-6">
                                     <div class="form-group">
                                         <label for="cc-exp" class="control-label mb-1">Quantidade</label>
-                                        <input id="cc-exp" name="cc-exp" type="number" class="form-control cc-exp" value="1" data-val="true" data-val-required="Please enter the card expiration"
+                                        <input id="cc-exp" name="quant" type="number" class="form-control cc-exp" value="1" data-val="true" data-val-required="Please enter the card expiration"
                                             data-val-cc-exp="Please enter a valid month and year"
                                             autocomplete="cc-exp">
                                         <span class="help-block" data-valmsg-for="cc-exp" data-valmsg-replace="true"></span>
@@ -364,18 +364,18 @@
                                 <div class="col-6">
                                     <label for="x_card_code" class="control-label mb-1">Categoria</label>
                                     <div class="input-group">
-                                        <input id="x_card_code" name="x_card_code" type="text" class="form-control cc-cvc" value="" data-val="true" data-val-required="Please enter the security code"
+                                        <input id="x_card_code" name="categ" type="text" class="form-control cc-cvc" value="" data-val="true" data-val-required="Please enter the security code"
                                             data-val-cc-cvc="Please enter a valid security code" autocomplete="off">
 
                                     </div>
                                 </div>
                             </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Confirm</button>
+                            </div>
                         </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary">Confirm</button>
-                    </div>
+                    </div>                    
                 </div>
             </div>
         </div>
